tmo/5-0-rpn_calc.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e2r13p9.42.fr
Darwin 16.7.0 x86_64
$> date
Tue Apr 10 13:32:28 CEST 2018
$> gcc --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin16.7.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
$> clang --version
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin16.7.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2018/c-exam-alone-in-the-dark-beginner/exam_20180410/qtran

= Git history ==================================================================
$> git -C /var/folders/mc/j7_l0t_d02q11xh5tl1bckj40000gq/T/tmpGBecfh/user log --pretty='%H - %an, %ad : %s'
3b40153285e836e71edc43c983578e864408f51c - Exam 42, Tue Apr 10 13:28:25 2018 +0200 : all is best
8cda68cfd2ca4199efa10dcae7ead923e85017ca - Exam 42, Tue Apr 10 13:28:09 2018 +0200 : all is best
51062cf4648fd8a0467e20339ce3b1bc0bee70bc - Exam 42, Tue Apr 10 12:40:41 2018 +0200 : all is best
5b0284848c7debf08d41cc2821a42c058fe3142a - Exam 42, Tue Apr 10 12:31:46 2018 +0200 : All is best
1595fa680575e22a16fa4bf2e06b5d773c315380 - Exam 42, Tue Apr 10 11:49:03 2018 +0200 : all is best
9c7094aec79ffefefb83da4717fa277a61126fd0 - Exam 42, Tue Apr 10 11:48:24 2018 +0200 : all is best
 
= Collected files ==========================================
$> ls -lAR /var/folders/mc/j7_l0t_d02q11xh5tl1bckj40000gq/T/tmpGBecfh/user
total 8
-rw-r--r--  1 deepthought  deepthought  1823 Apr 10 13:32 __GIT_HISTORY
drwxr-xr-x  6 deepthought  deepthought   204 Apr 10 13:32 flood_fill
drwxr-xr-x  3 deepthought  deepthought   102 Apr 10 13:32 moment
drwxr-xr-x  6 deepthought  deepthought   204 Apr 10 13:32 rpn_calc
drwxr-xr-x  3 deepthought  deepthought   102 Apr 10 13:32 sort_int_tab

/var/folders/mc/j7_l0t_d02q11xh5tl1bckj40000gq/T/tmpGBecfh/user/flood_fill:
total 32
-rw-r--r--  1 deepthought  deepthought  1413 Apr 10 13:32 flood_fill.c
-rw-r--r--  1 deepthought  deepthought  1103 Apr 10 13:32 ft_lib.h
-rw-r--r--  1 deepthought  deepthought  1248 Apr 10 13:32 stack.c
-rw-r--r--  1 deepthought  deepthought   184 Apr 10 13:32 t_point.h

/var/folders/mc/j7_l0t_d02q11xh5tl1bckj40000gq/T/tmpGBecfh/user/moment:
total 8
-rw-r--r--  1 deepthought  deepthought  2455 Apr 10 13:32 moment.c

/var/folders/mc/j7_l0t_d02q11xh5tl1bckj40000gq/T/tmpGBecfh/user/rpn_calc:
total 32
-rw-r--r--  1 deepthought  deepthought  1066 Apr 10 13:32 ft_lib.h
-rw-r--r--  1 deepthought  deepthought  1128 Apr 10 13:32 main.c
-rw-r--r--  1 deepthought  deepthought  1149 Apr 10 13:32 stack.c
-rw-r--r--  1 deepthought  deepthought  2278 Apr 10 13:32 str_process.c

/var/folders/mc/j7_l0t_d02q11xh5tl1bckj40000gq/T/tmpGBecfh/user/sort_int_tab:
total 8
-rw-r--r--  1 deepthought  deepthought  1170 Apr 10 13:32 sort_int_tab.c
 
= rpn_calc =====================================================================
$> clang -Wextra -Wall -Werror main.c stack.c str_process.c -o user_exe 
stack.c:16:5: error: redefinition of 'index' as different kind of symbol
int     index;
        ^
stack.c:16:5: note: unguarded header; consider using #ifdef guards or #pragma once
stack.c:16:5: note: previous definition is here
stack.c:21:8: error: non-object type 'char *(const char *, int)' is not assignable
        index = -1;
        ~~~~~ ^
stack.c:26:5: error: cannot increment value of type 'char *(const char *, int)'
        st[++index] = value;
           ^ ~~~~~
stack.c:31:12: error: comparison between pointer and integer ('char *(*)(const char *, int)' and 'int') [-Werror]
        if (index == -1)
            ~~~~~ ^  ~~
stack.c:33:7: error: cannot decrement value of type 'char *(const char *, int)'
        index--;
        ~~~~~^
stack.c:34:12: error: array subscript is not an integer
        return (st[index + 1]);
                  ^~~~~~~~~~
6 errors generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
